--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
+    "flux": "^2.1.1",
+    "jquery": "^3.1.0",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-router": "^2.6.0"
   }
 }
